feat(home): display real stats from database

--- a/backend/.env
+++ b/backend/.env
@@ -33,7 +33,7 @@ UPLOAD_PATH=./uploads
 # Explicit CORS origins (comma-separated)
 CORS_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
 
-SMTP_HOST=smtp.gmail.com
+66T=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=thotsapolnirandon@gmail.com
 SMTP_PASS=ylnimeyrmdqloylu
