--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "seed": "node prisma/seed.js",
+    "postinstall": "npx prisma generate",
+    "prisma:deploy": "npx prisma migrate deploy",
     "db:migrate": "npx prisma migrate dev",
     "db:generate": "npx prisma generate",
     "db:studio": "npx prisma studio",
