--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-VITE_API_URL=https://kusheet-backend.onrender.com/api
+VITE_API_URL=http://localhost:5173/api
 VITE_APP_NAME="KU SHEET"
 VITE_APP_VERSION="1.0.0"
 
