--- a/backend/package.json
+++ b/backend/package.json
@@ -42,14 +42,14 @@
     "google-auth-library": "^10.1.0",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
-  "multer": "^2.0.0",
-  "nodemailer": "^7.0.5",
-  "socket.io": "^4.7.5",
-    "stripe": "^14.23.0"
+    "multer": "^2.0.0",
+    "nodemailer": "^7.0.5",
+    "socket.io": "^4.7.5",
+    "stripe": "^14.23.0",
+    "concurrently": "^8.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7",
-    "prisma": "^6.14.0",
-    "concurrently": "^8.2.0"
+    "prisma": "^6.14.0"
   }
 }
